# fall-detection

./: .gitignore  .gitmodules  ADL_fall_data.py  README.md  activity_detection.ipynb  decision_tree.ipynb  fall_detection.ipynb  generate_data_for_ptolemy.py  generate_raw_data_csv.py  merge_csv.py  model_fall_detection.xml  model_fall_detection_with_prefall.xml  pyproject.toml  raw_data2.csv  raw_data222.csv  utils.py
